Changing the front page

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')">
-                    <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
+                    <img src="./img/tw-logo-white.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1>Converge Bangalore</h1>
+                <h1 style="color:white;">Converge Bangalore</h1>
                 
             </div>
         </div>
 
         <div class="row countdown">
             <div class="small-8 small-offset-2 large-8 large-offset-2 columns date">
-                <p>4<sup>th</sup> edition</p>
+                <p style="color:white;">4<sup>th</sup> edition</p>
                 <h4>Nov 28 2015</h4>
             </div>
         </div>
