--- a/index.html
+++ b/index.html
@@ -48,23 +48,38 @@
         </div>
     </section>
 
-    <section id="about" class="feature">
+<section id="about" class="feature">
     <div class="row"
          data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
         <div class="large-12 columns social">
             <a rel="nofollow" href="http://www.facebook.com/ThoughtWorks" target="_blank"><i class="icon-facebook-2" title="FaceBook discussion group" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
             <a rel="nofollow" href="http://www.linkedin.com/company/thoughtworks" target="_blank"><i class="icon-linkedin-2" title="LinkedIn group" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
             <a rel="nofollow" href="https://twitter.com/intent/tweet?url=thoughtworks-bangalore.github.io/converge&text=I+would+be+attending&hashtags=convergebangalore" target="_blank" title="Tweet hashtag #convergebangalore" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
-            <a rel="nofollow" href="mailto:converge-bangalore-2015.thoughtworks@gmail.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+            <a rel="nofollow" href="mailto:converge-bangalore-2015@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
             <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
     </div>
 
     <div class="row">
         <div class="large-12 columns" data-anchor-target="#_about">
-          <h4>DISRUPTIVE PRODUCT INNOVATION IN THE DIGITAL ECONOMY</h4> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Converge aims to bring together ideators, designers, business analysts, solution providers, technologists and product managers, project and program managers to connect, collaborate and learn from each other.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Our lives are more and more intertwined with digital systems like the internet, smart phones, digital cameras, laptops, tablets, 'phablets' and a host of other interconnected devices.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> This link marks the beginning of the ubiquitous shift towards technological solutions</p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> If you have an interesting story to share,<a href="speaker.html"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')"> register here.</a></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore-2015@thoughtworks.com" class="link"><em>converge-bangalore-2015@thoughtworks.com</em></a></p>
+          <h4>DISRUPTIVE PRODUCT INNOVATION IN THE DIGITAL ECONOMY</h4> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Converge aims to bring together ideators, designers, business analysts, solution providers, technologists and product managers, project and program managers to connect, collaborate and learn from each other.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Our lives are more and more intertwined with digital systems such as internet, smart phones, digital cameras, laptops, tablets, 'phablets' and a host of other interconnected devices.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> This link marks the beginning of the ubiquitous shift towards technological solutions</p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> If you have an interesting story to share,<a href="#speaker"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')"> register here.</a></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore-2015@thoughtworks.com" class="link"><em>converge-bangalore-2015@thoughtworks.com</em></a></p>
         </div>
     </div>
+</section>
+
+
+<section id="speaker" class="feature" >
+    <center>
+        <div class="large-12 columns social form-container" data-anchor-target="#_speaker">
+        <div class="header-container">
+            <h5 class="form-header">Speaker Registration</h5> 
+        </div>
+    </br>
+        <script src="http://app-e.marketo.com/js/forms2/js/forms2.min.js"></script>
+    <form id="mktoForm_3749"></form>
+    <script>MktoForms2.loadForm("http://app-e.marketo.com", "199-QDE-291", 3749);</script>
+    </div>
+    </center>
 </section>
 
 
@@ -93,7 +108,7 @@
                     </li>-->
                     <li>
                     
-                        <a href="speaker.html"  rel="nofollow"
+                        <a href="#speaker"  rel="nofollow"
                            onclick="ga('send', 'event', 'talk', 'talk')">
                             Speaker Registration
                         </a>
