--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <span class="sub-summary">
-                <p><b>Track 1</b><br><br>Responding to Disruptive Change<br><i><font size="4">by Sachin Sapre (Project Manager, ThoughtWorks)</i></font></p><br>
+                <p><b>Track 1</b><br><br>Responding to Disruptive Change<br><i><font size="4">by Sachin Sapre (Product Manager, ThoughtWorks)</i></font></p><br>
                 
                     <p><small>How do organizations analyze and respond to the challenges posed by disruptive digital changes to their business. Let’s discuss the framework one can use for analysis and the strategies that can be adopted to meet the challenge using a couple of case studies.</small></p><br>
                                
@@ -314,7 +314,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>
-                    4:45 AM
+                    4:45 PM
                 </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-3"
