--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                  <span class="sub-summary">
-                <p><b>Track 1</b><br><br>"Offline First" - Do you always need internet for your application to work?<br><i><font size="4">by Ranganathan Balashanmugam (App Dev, ThoughtWorks) & Venkata Padmavathi (App Dev, ThoughtWorks)
+                <p><b>Track 1</b><br><br>"Offline First" - Do you always need internet for your application to work?<br><i><font size="4">by Ranganathan Balashanmugam (App Dev, ThoughtWorks) & Venkata Padmavathi (App Dev, ThoughtWorks)</i></font></p><br>
                     <p><small>We live in connected world -- till the internet connections can be flakey and non-existent. That should not disturb the user experience. "No internet connection" is a network problem and not the application problem. Let’s hear the importance of "offline first applications" and the technologies that enable that to happen.</small></p>
                                
                 
