RWD modifications ** Changed in app.css - removed some attributes. ** index.html - removed some unused class reference.

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <center>
         <br>
         <br>
-        <div class="large-12 columns social form-container" data-anchor-target="#_speaker">
+        <div class="large-12 social form-container" data-anchor-target="#_speaker">
         <div class="header-container">
             <h5 class="form-header">Participant Registration</h5> 
         </div>
