Post event changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row countdown">
             <div class="small-8 small-offset-2 large-8 large-offset-2 columns date">
                 <p style="color:white;">2<sup>nd</sup> edition</p>
-                <h4>Nov 28 2015</h4>
+                <h4>Flashback</h4>
             </div>
         </div>
     </section>
