--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <div class="row countdown">
             <div class="small-8 small-offset-2 large-8 large-offset-2 columns date">
-                <p style="color:white;">2<sup>nd</sup> edition</p>
-                <h4>Flashback</h4>
+                <p style="color:white;">3<sup>rd</sup> edition</p>
+                <!--<h4>Flashback</h4>-->
             </div>
         </div>
     </section>
@@ -63,8 +63,9 @@
 
     <div class="row">
         <div class="large-12 columns" data-anchor-target="#_about">
-          <h4>DISRUPTIVE PRODUCT INNOVATION IN THE DIGITAL ECONOMY</h4> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Converge aims to bring together ideators, designers, business analysts, solution providers, technologists and product managers, project and program managers to connect, collaborate and learn from each other.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Our lives are more and more intertwined with digital systems such as internet, smart phones, digital cameras, laptops, tablets, 'phablets' and a host of other interconnected devices.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> This link marks the beginning of the ubiquitous shift towards technological solutions</p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><!--<a href="#participate"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')">--> <i>Thank you for registering, hope to see you on Saturday, 28th November.</i>
-          </p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore-2015@thoughtworks.com" class="link"><em>converge-bangalore-2015@thoughtworks.com</em></a></p>
+          <h4>THINK WHOLE SOLUTION, NOT JUST SOFTWARE</h4> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"></p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"> Converge aims to bring together ideators, analysts, managers, solution providers, and technologists to connect, collaborate and learn from each other. This event is run in all our ThoughtWorks India offices and aims at learning, sharing, and networking with the larger community regarding various emerging trends. You can expect talks and interactive sessions with real life examples on an array of interesting topics - from measuring the impact of your platform/product to inculcating business relevance mindset.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">Often great ideas arise, but with no takers. Often great products are made, but with no usage. Why? Because its entire ecosystem isn’t considered. Swachh Bharat movement doesn’t end with just building toilets in every nook and corner of our country. Only if the people embrace it and start using them, can the movement be successful. Similarly just building a piece of software cannot solve the real problem, its entire ecosystem needs to be considered.</p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
+            Thus our theme for Converge Bangalore 2016 - ‘Think whole solution, not just software’. Come be part of our movement to learn, network, and share about how the tech industry is not just about software but something beyond.</p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><!--<a href="#participate"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')">--> <i>Hope to see you on Saturday, 26th November.</i>
+          </p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
     </div>
 </section>
@@ -391,7 +392,7 @@
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
-                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>Nov 28</span></a></h1></li>
+                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>Nov 26</span></a></h1></li>
                 <li class="toggle-topbar menu-icon"><a href="#"></a></li>
             </ul>
             <section class="top-bar-section">
