Link to open in new tabs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="./img/tw-logo-white.png" alt="ThoughtWorks" align="center" />
                 </a>
                 <h1 style="color:white;">Converge Bangalore</h1>
-                <p style="color:white;opacity:0.8;font-size:0.80em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
+                <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
             </div>
         </div>
 
@@ -173,14 +173,14 @@
             <ul class="grid small-block-grid-3 large-block-grid-6">
                 
                 <li>
-                    <a href="./nov2015.html" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                    <a href="./nov2015.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
                         <div class="month">Nov</div>
                         <div class="day">28</div>
                         <div class="year">2015</div>
                     </a>
                 </li>
                 <li>
-                    <a href="https://info.thoughtworks.com/RE15Q2INEVConvergePuneMay2015_converge-bangalore-november-8-registration.html" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                    <a href="https://info.thoughtworks.com/RE15Q2INEVConvergePuneMay2015_converge-bangalore-november-8-registration.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
                         <div class="month">Nov</div>
                         <div class="day">08</div>
                         <div class="year">2014</div>
