Parul | Made changes to agenda

--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Leveraging Data Science for the world’s largest school ecosystem<br><i><font size="4">by Yogi Kulkarni (Chief Technology Officer, Xamcheck)</i></font></p>
-                
+                <p>Evolution of full-stack education startup in India
+                    <br><i><font size="4">by Yogi Kulkarni (Chief Technology Officer, Xamcheck)</i></font>
+                <br><br>Xamcheck a fast growing learning interventions in the world, provides pen & paper based personalised education to students from *within* the schooling system by taking a data-oriented approach. Yogi will cover Xamcheck’s journey - challenges, insights, pivots and learnings.<br><br></p>
             </div>
           </div>
         
