Added thougtworks address to about page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Why? Because their entire ecosystem wasn't considered.<br>
 Swachh Bharat movement doesn’t end with just building toilets. It'll work only if the people embrace it. Similarly a product doesn't succeed by just building an awesome piece of software. It's only when the customers adopt it. Hence for a product to thrive, its entire ecosystem needs to be considered.
 </p> <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><br>
             Thus our theme - ‘Think whole solution, not just software’. <br><br>Come be part of Converge, that aims to bring together people like you, who are passionate about learning current trends in the market, sharing your views and ideas, and networking with industry experts.<br><br></p>
-            <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><a href="#participate"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')"> <i>Hope to see you on Saturday, 26th November.</i></a>
+            <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><a href="#participate"  rel="nofollow" class="link" onclick="ga('send', 'event', 'talk', 'talk')"></a><a href="#location" class="link"><i>Hope to see you on Saturday, 26th November @ ThoughtWorks Bangalore</i></a>
           </p><p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">For any further questions / suggestions write to us at:<br> <a href="mailto:converge-bangalore@thoughtworks.com" class="link"><em>converge-bangalore@thoughtworks.com</em></a></p>
         </div>
     </div>
@@ -215,7 +215,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Think whole solution, not just software – Beyond Software<br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
+                <p>Panel discussion - Beyond Software <br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
                 Naren Nachiappan (Co-founder & MD, Jivox India),<br>
                 Jayesh Ghatge (Market Principal, ThoughtWorks),<br>
                 Hemant Khandelwal (Chief Technology Officer, Rivigo)<br><br></i></font>
