Kishore / Parul -Replaced Book my seat with Agenda

--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
             </div>
             <div class="large-5 columns participate">
                 
-                    <a href="#participate"  rel="nofollow"
-                           onclick="ga('send', 'event', 'participate', 'participate')">
-                        <h4>Book your seat</h4>
+                    <a href="#agenda"  rel="nofollow">
+                        <h4>Agenda</h4>
                     </a>  
             </div>
 
