Add youtube links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Key Note Address<br><i><font size="4">by Pramod Varma (Chief Architect, Aadhaar & India Stack)</i></font><font size="2"><br><br><p style="line-height:15px">Pramod will touch on the thinking behind India Stack and its potential. How it covers Aadhaar for Authentication, e-KYC documents, e-Sign, unified payment interface and privacy-protected data sharing, the whole ecosystem!</font></p></p>
+                <p><a href="https://www.youtube.com/watch?v=lvZSXjB_04s" target="_blank" class="vd-link">Key Note Address</a><br><i><font size="4">by Pramod Varma (Chief Architect, Aadhaar & India Stack)</i></font><font size="2"><br><br><p style="line-height:15px">Pramod will touch on the thinking behind India Stack and its potential. How it covers Aadhaar for Authentication, e-KYC documents, e-Sign, unified payment interface and privacy-protected data sharing, the whole ecosystem!</font></p></p>
             </div>
           </div>
         
@@ -178,7 +178,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Evolution of full-stack education startup in India
+                <p><a href="https://www.youtube.com/watch?v=mwB5FMyy2q8" target="_blank" class="vd-link">Evolution of full-stack education startup in India</a>
                     <br><i><font size="4">by Yogi Kulkarni (Chief Technology Officer, Xamcheck)</i></font><font size="2">
                 <br><br><p style="line-height:15px">Xamcheck a fast growing learning interventions in the world, provides pen & paper based personalised education to students from *within* the schooling system by taking a data-oriented approach. Yogi will cover Xamcheck’s journey - challenges, insights, pivots and learnings.</font></p></p>
             </div>
@@ -214,7 +214,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Panel discussion - Beyond Software <br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
+                <p><a href="" target="_blank" class="vd-link">Panel discussion - Beyond Software</a><br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
                 Naren Nachiappan (Co-founder & MD, Jivox India),<br>
                 Jayesh Ghatge (Market Principal, ThoughtWorks),<br>
                 Hemant Khandelwal (Chief Technology Officer, Rivigo)<br><br></i></font>
@@ -235,7 +235,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Designing solutions for rural India<br><i><font size="4">by Mangalam Nandakumar (Chief Product Officer, RangDe)</i></font><font size="2">
+                <p><a href="https://www.youtube.com/watch?v=6iH0ALjv8F0" target="_blank" class="vd-link">Designing solutions for rural India</a><br><i><font size="4">by Mangalam Nandakumar (Chief Product Officer, RangDe)</i></font><font size="2">
                     <br><br><p style="line-height:15px">RangDe is a not for profit organisation with a mission to eliminate poverty in India through a peer-to-peer lending model. Mangalam will talk about how technology is an enabler that places the borrowers experience and interests at the core while optimising for experience, not for scale.</font></p></p>
             </div>
           </div>
@@ -266,7 +266,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Data disruption in the Logistics industry<br><i><font size="4">by Hemant Khandelwal (Chief Technology Officer, Rivigo)</i></font><font size="2">
+                <p><a href="https://www.youtube.com/watch?v=_CCAPqGOGA4" class="vd-link">Data disruption in the Logistics industry</a><br><i><font size="4">by Hemant Khandelwal (Chief Technology Officer, Rivigo)</i></font><font size="2">
                     <br><br><p style="line-height:15px">Global trucking revenue pool is close to 2 trillion USD which is about 20X the cab market revenue pool. Even in a developed market, it is a highly fragmented and antiquated business. Hemant will delve into how technology and data can make fundamental changes to a truck driver’s life and bring long term benefits to the business.</font></p></p>
             </div>
           </div>
@@ -282,7 +282,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-8"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Learn - Digress - Separate<br><i><font size="4">by Dinker Charak (Principal Product Manager, ThoughtWorks)</i></font><font size="2"><br><br><p style="line-height:15px">Shuhari roughly translates to "first learn, then detach, and finally transcend." This talk will cover various ways we stay ahead to create solutions whose needs are just coming above the horizons.</font></p></p>
+                <p><a href="https://www.youtube.com/watch?v=IIUqtds1G1w" target="_blank" class="vd-link">Learn - Digress - Separate</a><br><i><font size="4">by Dinker Charak (Principal Product Manager, ThoughtWorks)</i></font><font size="2"><br><br><p style="line-height:15px">Shuhari roughly translates to "first learn, then detach, and finally transcend." This talk will cover various ways we stay ahead to create solutions whose needs are just coming above the horizons.</font></p></p>
             </div>
           </div>
 
