Update link target

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p><a href="https://www.youtube.com/watch?v=_CCAPqGOGA4" class="vd-link">Data disruption in the Logistics industry</a><br><i><font size="4">by Hemant Khandelwal (Chief Technology Officer, Rivigo)</i></font><font size="2">
+                <p><a href="https://www.youtube.com/watch?v=_CCAPqGOGA4" target="_blank" class="vd-link">Data disruption in the Logistics industry</a><br><i><font size="4">by Hemant Khandelwal (Chief Technology Officer, Rivigo)</i></font><font size="2">
                     <br><br><p style="line-height:15px">Global trucking revenue pool is close to 2 trillion USD which is about 20X the cab market revenue pool. Even in a developed market, it is a highly fragmented and antiquated business. Hemant will delve into how technology and data can make fundamental changes to a truck driver’s life and bring long term benefits to the business.</font></p></p>
             </div>
           </div>
