Update Panel discussion url

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Swachh Bharat movement doesn’t end with just building toilets. It'll work only
             <div class="large-8 columns summary" data-anchor-target="#agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p><a href="" target="_blank" class="vd-link">Panel discussion - Beyond Software</a><br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
+                <p><a href="https://www.youtube.com/watch?v=A1V50mc301w" target="_blank" class="vd-link">Panel discussion - Beyond Software</a><br><br>Panelists:<br><i><font size="4">Manu Srivastava (VP, eGovernments Foundation),<br> 
                 Naren Nachiappan (Co-founder & MD, Jivox India),<br>
                 Jayesh Ghatge (Market Principal, ThoughtWorks),<br>
                 Hemant Khandelwal (Chief Technology Officer, Rivigo)<br><br></i></font>
