--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="row countdown columns large-centered">
             <div class="small-4 large-4 columns date">
-                <p style="color:white;">4<sup>rd</sup> edition</p>
+                <p style="color:white;">4<sup>th</sup> edition</p>
                 <h4>April 21</h4>
             </div>
             <div class="small-4 large-4 columns counter">
@@ -378,7 +378,7 @@
     </div>
 </footer>
 
-<script>window.targetDate = new Date(2016, 10, 26)</script>
+<script>window.targetDate = new Date("April 21, 2018 09:00:00")</script>
 <script src="js/ticker.js"></script>
 
 
