--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-6"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Panel discussion - Digital payments are making banking services more accessible than ever. <br>
+                <p>Panel discussion - Digital payments are making banking services more accessible than ever<br>
                 <br>Panelists:<br><i><font size="4">
                 Tamaghna Basu, Co-founder and CTO, NeoEYED,<br> 
                 Lakshmanan, Banking Practice Lead, ThoughtWorks<br>
