--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Event KickOff<br><i><font size="4">Visalakshi Subramaniam, Retail Practise Lead, ThoughtWorks</i></font></p>
+                <p>Event KickOff<br><i><font size="4">Visalakshi Subramaniam, Global Retail Lead, ThoughtWorks</i></font></p>
               
             </div>
 
@@ -313,13 +313,13 @@
     </div>
 
     <div class="row">
-        <div class="large-5 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
-            <p>
+        <div class="large-6 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
+            <p><font size="4">
                 <span>ThoughtWorks Technologies (India) Pvt. Ltd.</span>
                 <span>Brigade Metropolis, Garudachar Palya,</span>
                 <span>Mahadevapura, Whitefield,</span>
                 <span>Bengaluru, Karnataka 560048</span>
-                <span><small><a href="https://www.google.co.in/maps/place/ThoughtWorks+(Whitefield)/@12.993179,77.7022114,15z/data=!4m5!3m4!1s0x0:0xa419142fba43e138!8m2!3d12.993179!4d77.7022114" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+                <span></font><small><a href="https://www.google.co.in/maps/place/ThoughtWorks+(Whitefield)/@12.993179,77.7022114,15z/data=!4m5!3m4!1s0x0:0xa419142fba43e138!8m2!3d12.993179!4d77.7022114" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
             </p>
         </div>
 
