Parul | Change panelist information

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                 <p>Panel discussion - Digital payments are making banking services more accessible than ever<br>
                 <br>Panelists:<br><i><font size="4">
                 Tamaghna Basu, Co-founder and CTO, NeoEYED,<br> 
-                Lakshmanan, Banking Practice Lead, ThoughtWorks<br>
+                Lakshmanan C S, Advisory - Banking and Financial services,<br>
+                Diwakar Kaushik, VP Products at GO-JEK<br>
                 <br></i></font>
                 Moderator:<br>
                 <i><font size="4">Seshadri Krishnan, Digital Transformation Lead, ThoughtWorks</i>
